--- a/style.css
+++ b/style.css
@@ -118,17 +118,17 @@ body{
 }
 
 .project-card{
-    height: 400px;
+    height: 300px;
     position: relative;
 }
 
 .project-img{
     width: 100%;
-    height: 100%;
+    height: 110%;
     position: absolute;
     top: 0;
     left: 0;
-    object-fit: cover;
+    object-fit: contain;
     transition: .5s;
 }
 
